Prepare v0.1.1 based on PyWriter v9.0.5
- Adjust initial window size.
- Make the project standalone by copying the latest PyWriter library.

--- a/i18n/de.po
+++ b/i18n/de.po
@@ -1,11 +1,11 @@
-# novelyst_matrix Dictionary (English-German)
+# yw-table Dictionary (English-German)
 # Copyright (C) 2022 Peter Triesberger
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 0.1.0\n"
-"POT-Creation-Date: 2022-12-15 15:05:13\n"
-"PO-Revision-Date: 2022-12-15 15:05:14\n"
+"Project-Id-Version: 0.1.1\n"
+"POT-Creation-Date: 2022-12-15 16:33:21\n"
+"PO-Revision-Date: 2022-12-15 16:33:22\n"
 "Last-Translator: Peter Triesberger\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
