--- a/i18n/messages.pot
+++ b/i18n/messages.pot
@@ -3,8 +3,8 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 0.4.0\n"
-"POT-Creation-Date: 2022-12-19 10:13:12\n"
+"Project-Id-Version: 0.5.0\n"
+"POT-Creation-Date: 2022-12-19 12:50:42\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: LANGUAGE\n"
@@ -57,6 +57,9 @@ msgid "Unknown author"
 msgstr ""
 
 msgid "Untitled project"
+msgstr ""
+
+msgid "Use the mouse wheel for vertical scrolling, and <Shift>-mouse wheel for horizontal scrolling."
 msgstr ""
 
 msgid "by"
